feat: 增加BOM编码加载接口
